
        * src/openvrml/OpenVRML/node.h:  Made Node::visited private.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Moved NodePath typedef from Node class to OpenVRML namespace;
          use a std::deque instead of a std::list.

        * src/openvrml/OpenVRML/node.h:  Removed relocate stuff
          (prematurely checked in by accident).

2002-12-23  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Use newer
          UnsupportedInterface constructor.

2002-12-21  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Only use $x_includes and $x_libraries if those
          variables have been set.

        * README, configure.ac, doc/Doxyfile:  Updated version number to
          0.13.99 (pre-release).

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed justify "END"
          for horizontal major alignment.

2002-12-20  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Makefile.am: add config.h 

2002-12-20  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Added PTHREAD_CFLAGS to GL_CFLAGS.

        * NEWS:  Updates for 0.13.0 release.

        * src/openvrml/OpenVRML/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/Makefile.am:  Updated libtool
          library version numbers.

2002-12-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Removed private
          setMVMatrix/getMVMatrix from drag sensor nodes.  More doc-
          comment love.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed normal for Text.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp:  Fixed type for offset
          field of PlaneSensor.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed problem with
          evaluateCurve_ introducing redundant vertices for Text.
